apps/servarr/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: servarr
  labels:
    app.kubernetes.io/name: servarr
